--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<posts></posts>
+<navbar></navbar>
+<!-- <posts></posts> -->
+<!-- <github-followers></github-followers> -->
+<router-outlet></router-outlet>
