github follwers component

--- a/src/app/github-followers/github-followers.component.html
+++ b/src/app/github-followers/github-followers.component.html
@@ -3,7 +3,7 @@
   <img class="mr-3" [src]="follower.avatar_url" height="80" width="80" alt="Generic placeholder image">
   <div class="media-body">
     <h4 class="mt-0">
-      <a [routerLink]="['/followers', follower.id]">{{ follower.login }} </a>
+      <a [routerLink]="['/followers', follower.id, follower.login]">{{ follower.login }} </a>
     </h4>
     <a [href]="follower.html_url">{{ follower.html_url }}</a>
   </div>
